// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree invoked child machines should be supported 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": "child",
          "props": false,
        },
      ],
      "component": "one",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should be supported in a parallel state 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": "child",
          "props": false,
        },
      ],
      "component": "one",
      "props": false,
    },
    Object {
      "children": Array [],
      "component": "two",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (callback) 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": "one",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should ignore non-statechart children (promise) 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": "one",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;

exports[`xstate-component-tree invoked child machines should rebuild on child transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
-           "component": "child1",
+           "component": "child2",
            "props": false,
          },
        ],
        "component": "one",
        "props": false,
`;

exports[`xstate-component-tree invoked child machines should rebuild on nested invoked machine transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
-               "component": "grandchild1",
+               "component": "grandchild2",
                "props": false,
              },
            ],
            "component": "child",
            "props": false,
`;

exports[`xstate-component-tree invoked child machines should rebuild on parent transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
            "component": "child1",
            "props": false,
          },
          Object {
            "children": Array [],
-           "component": "oneone",
+           "component": "onetwo",
            "props": false,
          },
        ],
        "component": "one",
        "props": false,
`;

exports[`xstate-component-tree invoked child machines should remove data once the invoke is halted 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "children": Array [
      Object {
-       "children": Array [
-         Object {
        "children": Array [],
-           "component": "child",
-           "props": false,
-         },
-       ],
-       "component": "one",
+       "component": "two",
        "props": false,
      },
    ],
    "id": "(machine)",
  }
`;

exports[`xstate-component-tree invoked child machines should support nested invoked machines 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": "grandchild",
              "props": false,
            },
          ],
          "component": "child",
          "props": false,
        },
      ],
      "component": "one",
      "props": false,
    },
  ],
  "id": "(machine)",
}
`;
